--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
     </footer>
 
     <!-- Scripts -->
+    <!-- Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/gemini-api.js"></script>
     <script src="js/speech-recognition.js"></script>
     <script src="js/analytics.js"></script>
